--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/iCoder/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -55,7 +55,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact us</a>
+                        <a class="nav-link" href="/iCoder/contact.html">Contact us</a>
                     </li>
 
 
