--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
                         </li>
                     <li class="nav-item active">
-                        <a class="nav-link " href="/about.html">About</a>
+                        <a class="nav-link " href="/iCoder/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact us</a>
+                        <a class="nav-link" href="/iCoder/contact.html">Contact us</a>
                     </li>
 
 
