--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link  " href="/about.html">About</a>
+                        <a class="nav-link  " href="/iCoder/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -43,7 +43,7 @@
                         </ul>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="/contact.html">Contact us</a>
+                        <a class="nav-link active" href="/iCoder/contact.html">Contact us</a>
                     </li>
 
 
